Making the consumer in the same application in the same application. It will only contain

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
+#Kafka Topic
+message.topic.name=my-replicated-topic
+spring.kafka.boostrap-servers=localhost:9092
 
+#Unique String which identifis which consumer group this consumer belond to
+spring.kafka.consumer.group-id=jcq-group
